# ofxstatement-raiffeisencz

./: .gitignore  README.rst  pyproject.toml  setup.py
contrib/archlinux/: PKGBUILD
src/ofxstatement/plugins/: raiffeisencz.py
tools/: mk_bank-rb-CZK.sh  mk_bank-rb.sh
